# fusioncord

./: Cargo.toml  LICENSE  README.md  client_payloads.json  client_payloads.md
fusioncord-core/: Cargo.toml
fusioncord-core/src/: client.rs  connection.rs  lib.rs  main.rs  message.rs
fusioncord-domain/: Cargo.toml
fusioncord-ui/: Cargo.toml
fusioncord-ui/src/: app.rs  main.rs  renderer.rs
lib/twilight-client/src/gateway/event/: dispatch.rs  mod.rs
lib/twilight-client/src/gateway/payload/incoming/: mod.rs  ready.rs  thread_create.rs
