[package]
name = "fusioncord-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
tokio = { version = "1.29.1", features = ["full"] }
futures-util = "0.3.28"
serde = "1.0.180"
serde_json = "1.0.104"
serde_repr = "0.1.16"
thiserror = "1.0.44"
twilight-model = { workspace = true }
tracing = "0.1.35"
tracing-subscriber = "0.3.17"